# ignite

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  build.rs  build_all.ps1
.github/workflows/: build-linux-binary.yml  build-package-apk.yml  build-package-appimage.yml  build-package-flatpak.yml  build-windows-binary.yml  release.yml
packaging/apk/: APKBUILD
packaging/appimage/: AppRun  appimage-builder.yml
packaging/aur/: PKGBUILD
packaging/completions/: generate-completions.sh
packaging/deb/: build-debian-package.sh
packaging/deb/debian/: control  postinst  prerm
packaging/desktop/: ignite.desktop  rstart.desktop
packaging/flatpak/: build-flatpak.sh  org.local76.rstart.yaml
packaging/nix/: default.nix
packaging/rpm/: build-redhat-rpm.sh  rstart.spec
packaging/winget/: winget.yaml
packaging/wix/: build-windows-msi.ps1  main.wxs
scripts/: build.sh  release.sh  test.sh
src/: bootstrap.rs  config.rs  config_tests.rs  doctor.rs  input.rs  logger.rs  main.rs  reg.rs  startup.rs  tests_perf.rs  utils_tests.rs  widgets.rs  win32.rs  worker.rs
src/app/: actions.rs  keys.rs  mod.rs  mouse.rs
src/backend/: config_tests.rs  identity.rs  mod.rs  sys_info.rs
src/backend/startup/: backup_win.rs  stub.rs  win32.rs  win32_actions.rs
src/chrome/: app_state.rs  app_state_tests.rs  embedded_docs.rs  embedded_docs_tests.rs
src/startup/: backup_win.rs  startup_mock.rs  startup_win.rs
src/ui/: accent_list.rs  banner_footer.rs  layout_helpers.rs  markdown.rs  markdown_viewer.rs  mod.rs  overlays.rs  panels.rs  text_format.rs  theme.rs  utils.rs  widgets.rs
web/: index.html
