[package]
name = "ignite"
version = "2026.6.10-1"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["termwiz"] }
crossterm = "0.28"




[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/release/ignite", "usr/bin/ignite", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/ignite.png", "644"],
    ["packaging/desktop/ignite.desktop", "usr/share/applications/ignite.desktop", "644"],
]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo
