[package]
license = "MIT"
description = "ignite - part of the local76 ecosystem"
name = "ignite"
version = "2026.6.10-1"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["termwiz"] }
crossterm = "0.28"




[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_Shutdown",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Graphics_Dwm",
    "Win32_System_EventLog",
    "Win32_Security",
    "Win32_NetworkManagement_WiFi",
] }

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
name = "app-ignite"
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/release/ignite", "usr/bin/ignite", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/ignite.png", "644"],
    ["packaging/desktop/ignite.desktop", "usr/share/applications/ignite.desktop", "644"],
]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo

[package.metadata.generate-rpm]
name = "app-ignite"
version = "2026.6.10.1"
release = "1"
arch = "x86_64"
summary = "app-ignite package"
description = "app-ignite package"
license = "MIT"
assets = [
    { source = "target/release/ignite", dest = "/usr/bin/ignite", mode = "755" },
    { source = "assets/brand/app_icon.png", dest = "/usr/share/pixmaps/ignite.png", mode = "644" },
    { source = "packaging/desktop/ignite.desktop", dest = "/usr/share/applications/ignite.desktop", mode = "644" }
]
